# fast-vj

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  fetch_deps.sh
media/: make-test.sh
patches/: example.lua  osc_control.lua  shader_audio.lua
shaders/: default.glsl  kaleidoscope.glsl  oscilloscope.glsl  plasma.glsl  spectrum.glsl  waveform.glsl
src/: clips.c  clips.h  main.c  mic.c  mic.h  osc.c  osc.h  script.c  script.h  shaders.c  shaders.h  sokol_impl.c  video.c  video.h
tools/: osc_proxy.py  shell.html
